# lawdoc

./: .gitignore  README.md
chinese_ner/: .gitignore  requirements.txt
chinese_ner/data/: clue2bioes.py  dev.json  train.json
chinese_ner/source/: config.py  logger.py  ner_main.py  ner_predict.py  ner_processor.py  ner_server.py
client/: .gitignore  package-lock.json  package.json
client/src/app/: error.tsx  globals.css  nav.tsx  page.tsx  pagination.tsx  parameter.tsx  session.tsx
client/src/app/admin/: nav.tsx
client/src/app/admin/file/: page.tsx
client/src/app/admin/home/: page.tsx
client/src/app/admin/login/: page.tsx
client/src/app/admin/user/: page.tsx
client/src/app/file/: page.tsx
client/src/app/home/: page.tsx
client/src/app/show/: page.tsx
client/src/app/user/: page.tsx
client/src/app/user/login/: page.tsx
client/src/app/user/recover_passwd/: page.tsx
client/src/app/user/signup/: page.tsx
client/src/app/work/: page.tsx
lawdoc/: .gitignore  CMakeLists.txt  config.json  main.cc
lawdoc/controllers/: lawdoc_file_ctl.cc  lawdoc_file_ctl.h  lawdoc_ner_ctl.cc  lawdoc_ner_ctl.h  lawdoc_user_ctl.cc  lawdoc_user_ctl.h
lawdoc/db/: db.h  entity.cc  entity.h  traits.h
lawdoc/legal_instrument/: 1711371460442601_劳荣枝故意杀人绑架抢劫罪死刑复核刑事裁定书1txt
lawdoc/models/: TEntities.cc  TEntities.h  TFile.cc  TFile.h  TUser.cc  TUser.h  model.json
lawdoc/ocr/: ocr.cc  ocr.h
lawdoc/src/: captcha.cc  captcha.h  ocr.cc  ocr.h  session.h
lawdoc/test/: CMakeLists.txt
lawdoc/utils/: error.cc  error.h  utils.cc  utils.h
